change start and stop to connect and disconnect

--- a/src/generic_ui/templates/contact.html
+++ b/src/generic_ui/templates/contact.html
@@ -61,8 +61,7 @@
         </div>
         <div ng-switch-default>
           <p class='uproxytip'>
-            You need to request access from your contact before making a
-            connection.
+            Request access from contact before connection.
           </p>
           <uproxy-consent-action text='Request'
               action='REQUEST'>
