use creative labs cloud image for now

--- a/src/generic_ui/styles/contact.sass
+++ b/src/generic_ui/styles/contact.sass
@@ -115,7 +115,7 @@
   width: 100%
   font-size: 20px
   // This provides the connecting-to-internet graphical metaphor.
-  background: #fff url('../icons/web.jpg') no-repeat center -100px
+  background: #fff url('../icons/clouds_background.png') no-repeat center top
   background-size: contain
   text-align: center
   font-size: $fontSize * 0.8
