Update back arrows to point right in RTL mode
This adds a global style that will identify back arrows in header bars
and make them point right when we are in RTL mode.

Fixes #1608

--- a/src/generic_ui/style/global.css
+++ b/src/generic_ui/style/global.css
@@ -24,3 +24,7 @@ body /deep/ a {
   font-weight: 500;
   color: #009688;
 }
+
+html /deep/ [dir='rtl'] /deep/ [layout][horizontal] /deep/ core-icon[icon='arrow-back'] {
+  transform: rotate(180deg);
+}
