--- a/src/generic_ui/style/global.css
+++ b/src/generic_ui/style/global.css
@@ -28,3 +28,7 @@ body /deep/ a {
 html /deep/ [dir='rtl'] /deep/ [layout][horizontal] /deep/ core-icon[icon='arrow-back'] {
   transform: rotate(180deg);
 }
+
+body /deep/ paper-input-decorator /deep/ .underline div {
+  background-color: #009688;
+}
