This updates uproxy-appbar to use core-toolbar
This is just code simplification, nothing too interesting.

--- a/src/generic_ui/style/global.css
+++ b/src/generic_ui/style/global.css
@@ -32,3 +32,8 @@ html /deep/ [dir='rtl'] /deep/ [layout][horizontal] /deep/ core-icon[icon='arrow
 body /deep/ paper-input-decorator /deep/ .underline div {
   background-color: #009688;
 }
+
+body /deep/ core-toolbar {
+  background-color: #009688;
+  color: white;
+}
